--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "maven-geography",
+  "name": "dialectica_geography",
   "version": "1.0.0",
-  "description": "geography tools",
-  "main": "index.js",
+  "description": "Geography tools get list of countries, get country continent, dial etc..",
+  "main": "dist/mavenGeography.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development"
   },
-  "author": "maven",
+  "author": "Dialectica",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
