--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dialectica_geography",
   "version": "1.0.2",
   "description": "Geography tools get list of countries, get country continent, dial etc..",
+  "homepage": "https://github.com/Dialectican/dialectica-geography",
   "main": "dist/mavenGeography.js",
   "scripts": {
     "build": "webpack --mode production",
