--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dialectica_geography",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Geography tools get list of countries, get country continent, dial etc..",
   "homepage": "https://github.com/Dialectican/dialectica-geography",
   "main": "dist/mavenGeography.js",
@@ -24,5 +24,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
-  }
+  },
+  "dependencies": {}
 }
