--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dialectica_geography",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Geography tools get list of countries, get country continent, dial etc..",
   "homepage": "https://github.com/Dialectican/dialectica-geography",
   "main": "dist/mavenGeography.js",
@@ -11,10 +11,11 @@
   "author": "Dialectica",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "babel-loader": "^8.0.5",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
@@ -25,5 +26,7 @@
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/polyfill": "^7.2.5"
+  }
 }
